# StepicLessonC

./: CMakeLists.txt  main.cpp  server.cpp  server.h  settings.cpp  settings.h
